// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer transfers are properly de-categorized 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 5000,
    "category": "1",
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer transfers are properly de-categorized 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -9,17 +9,40 @@
      \\"id\\": \\"id6\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
-     \\"notes\\": null,
+     \\"notes\\": \\"hi\\",
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id4\\",
+     \\"payee_name\\": \\"\\",
+     \\"reconciled\\": 0,
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"id7\\",
+   },
+   Object {
+     \\"account\\": \\"three\\",
+     \\"amount\\": -5000,
+     \\"category\\": null,
+     \\"cleared\\": 0,
+     \\"date\\": 20170101,
+     \\"error\\": null,
+     \\"id\\": \\"id7\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": \\"hi\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id5\\",
-     \\"payee_name\\": \\"Non-transfer\\",
+     \\"payee\\": \\"id2\\",
+     \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": null,
+     \\"transfer_id\\": \\"id6\\",
    },
  ]"
`;

exports[`Transfer transfers are properly de-categorized 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,31 +1,31 @@
  Array [
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": 5000,
-     \\"category\\": \\"1\\",
+     \\"category\\": null,
      \\"cleared\\": 1,
      \\"date\\": 20170101,
      \\"error\\": null,
      \\"id\\": \\"id6\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": \\"hi\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id4\\",
+     \\"payee\\": \\"id3\\",
      \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": \\"id7\\",
    },
    Object {
-     \\"account\\": \\"three\\",
+     \\"account\\": \\"two\\",
      \\"amount\\": -5000,
      \\"category\\": null,
      \\"cleared\\": 0,
      \\"date\\": 20170101,
      \\"error\\": null,"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 1`] = `
Array [
  Object {
    "account": "one",
    "amount": 5000,
    "category": null,
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer transfers are properly inserted/updated/deleted 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -20,6 +20,52 @@
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": null,
    },
+   Object {
+     \\"account\\": \\"one\\",
+     \\"amount\\": 5000,
+     \\"category\\": null,
+     \\"cleared\\": 1,
+     \\"date\\": 20170101,
+     \\"error\\": null,
+     \\"id\\": \\"id7\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id3\\",
+     \\"payee_name\\": \\"\\",
+     \\"reconciled\\": 0,
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"id8\\",
+   },
+   Object {
+     \\"account\\": \\"two\\",
+     \\"amount\\": -5000,
+     \\"category\\": null,
+     \\"cleared\\": 0,
+     \\"date\\": 20170101,
+     \\"error\\": null,
+     \\"id\\": \\"id8\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": null,
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id2\\",
+     \\"payee_name\\": \\"\\",
+     \\"reconciled\\": 0,
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"id7\\",
+   },
  ]"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,70 +2,70 @@
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": 5000,
      \\"category\\": null,
      \\"cleared\\": 1,
-     \\"date\\": 20170101,
+     \\"date\\": 20170105,
      \\"error\\": null,
-     \\"id\\": \\"id6\\",
+     \\"id\\": \\"id7\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
-     \\"notes\\": null,
+     \\"notes\\": \\"This is a note\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id5\\",
-     \\"payee_name\\": \\"Non-transfer\\",
+     \\"payee\\": \\"id3\\",
+     \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": null,
+     \\"transfer_id\\": \\"id8\\",
    },
    Object {
-     \\"account\\": \\"one\\",
-     \\"amount\\": 5000,
+     \\"account\\": \\"two\\",
+     \\"amount\\": -5000,
      \\"category\\": null,
-     \\"cleared\\": 1,
-     \\"date\\": 20170101,
+     \\"cleared\\": 0,
+     \\"date\\": 20170105,
      \\"error\\": null,
-     \\"id\\": \\"id7\\",
+     \\"id\\": \\"id8\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
-     \\"notes\\": null,
+     \\"notes\\": \\"This is a note\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id3\\",
+     \\"payee\\": \\"id2\\",
      \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id8\\",
+     \\"transfer_id\\": \\"id7\\",
    },
    Object {
-     \\"account\\": \\"two\\",
-     \\"amount\\": -5000,
+     \\"account\\": \\"one\\",
+     \\"amount\\": 5000,
      \\"category\\": null,
-     \\"cleared\\": 0,
+     \\"cleared\\": 1,
      \\"date\\": 20170101,
      \\"error\\": null,
-     \\"id\\": \\"id8\\",
+     \\"id\\": \\"id6\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": null,
      \\"parent_id\\": null,
-     \\"payee\\": \\"id2\\",
-     \\"payee_name\\": \\"\\",
+     \\"payee\\": \\"id5\\",
+     \\"payee_name\\": \\"Non-transfer\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id7\\",
+     \\"transfer_id\\": null,
    },
  ]"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -11,21 +11,21 @@
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": \\"This is a note\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id3\\",
+     \\"payee\\": \\"id4\\",
      \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
      \\"transfer_id\\": \\"id8\\",
    },
    Object {
-     \\"account\\": \\"two\\",
+     \\"account\\": \\"three\\",
      \\"amount\\": -5000,
      \\"category\\": null,
      \\"cleared\\": 0,
      \\"date\\": 20170105,
      \\"error\\": null,"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 5`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -11,41 +11,18 @@
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": \\"This is a note\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id4\\",
-     \\"payee_name\\": \\"\\",
-     \\"reconciled\\": 0,
-     \\"schedule\\": null,
-     \\"sort_order\\": 123456789,
-     \\"starting_balance_flag\\": 0,
-     \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id8\\",
-   },
-   Object {
-     \\"account\\": \\"three\\",
-     \\"amount\\": -5000,
-     \\"category\\": null,
-     \\"cleared\\": 0,
-     \\"date\\": 20170105,
-     \\"error\\": null,
-     \\"id\\": \\"id8\\",
-     \\"imported_id\\": null,
-     \\"imported_payee\\": null,
-     \\"is_child\\": 0,
-     \\"is_parent\\": 0,
-     \\"notes\\": \\"This is a note\\",
-     \\"parent_id\\": null,
-     \\"payee\\": \\"id2\\",
-     \\"payee_name\\": \\"\\",
+     \\"payee\\": \\"id9\\",
+     \\"payee_name\\": \\"Not transferred anymore\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id7\\",
+     \\"transfer_id\\": null,
    },
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": 5000,
      \\"category\\": null,"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 6`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -11,18 +11,41 @@
      \\"imported_payee\\": null,
      \\"is_child\\": 0,
      \\"is_parent\\": 0,
      \\"notes\\": \\"This is a note\\",
      \\"parent_id\\": null,
-     \\"payee\\": \\"id9\\",
-     \\"payee_name\\": \\"Not transferred anymore\\",
+     \\"payee\\": \\"id3\\",
+     \\"payee_name\\": \\"\\",
+     \\"reconciled\\": 0,
+     \\"schedule\\": null,
+     \\"sort_order\\": 123456789,
+     \\"starting_balance_flag\\": 0,
+     \\"tombstone\\": 0,
+     \\"transfer_id\\": \\"id10\\",
+   },
+   Object {
+     \\"account\\": \\"two\\",
+     \\"amount\\": -5000,
+     \\"category\\": null,
+     \\"cleared\\": 0,
+     \\"date\\": 20170105,
+     \\"error\\": null,
+     \\"id\\": \\"id10\\",
+     \\"imported_id\\": null,
+     \\"imported_payee\\": null,
+     \\"is_child\\": 0,
+     \\"is_parent\\": 0,
+     \\"notes\\": \\"This is a note\\",
+     \\"parent_id\\": null,
+     \\"payee\\": \\"id2\\",
+     \\"payee_name\\": \\"\\",
      \\"reconciled\\": 0,
      \\"schedule\\": null,
      \\"sort_order\\": 123456789,
      \\"starting_balance_flag\\": 0,
      \\"tombstone\\": 0,
-     \\"transfer_id\\": null,
+     \\"transfer_id\\": \\"id7\\",
    },
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": 5000,
      \\"category\\": null,"
`;

exports[`Transfer transfers are properly inserted/updated/deleted 7`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,56 +2,10 @@
    Object {
      \\"account\\": \\"one\\",
      \\"amount\\": 5000,
      \\"category\\": null,
      \\"cleared\\": 1,
-     \\"date\\": 20170105,
-     \\"error\\": null,
-     \\"id\\": \\"id7\\",
-     \\"imported_id\\": null,
-     \\"imported_payee\\": null,
-     \\"is_child\\": 0,
-     \\"is_parent\\": 0,
-     \\"notes\\": \\"This is a note\\",
-     \\"parent_id\\": null,
-     \\"payee\\": \\"id3\\",
-     \\"payee_name\\": \\"\\",
-     \\"reconciled\\": 0,
-     \\"schedule\\": null,
-     \\"sort_order\\": 123456789,
-     \\"starting_balance_flag\\": 0,
-     \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id10\\",
-   },
-   Object {
-     \\"account\\": \\"two\\",
-     \\"amount\\": -5000,
-     \\"category\\": null,
-     \\"cleared\\": 0,
-     \\"date\\": 20170105,
-     \\"error\\": null,
-     \\"id\\": \\"id10\\",
-     \\"imported_id\\": null,
-     \\"imported_payee\\": null,
-     \\"is_child\\": 0,
-     \\"is_parent\\": 0,
-     \\"notes\\": \\"This is a note\\",
-     \\"parent_id\\": null,
-     \\"payee\\": \\"id2\\",
-     \\"payee_name\\": \\"\\",
-     \\"reconciled\\": 0,
-     \\"schedule\\": null,
-     \\"sort_order\\": 123456789,
-     \\"starting_balance_flag\\": 0,
-     \\"tombstone\\": 0,
-     \\"transfer_id\\": \\"id7\\",
-   },
-   Object {
-     \\"account\\": \\"one\\",
-     \\"amount\\": 5000,
-     \\"category\\": null,
-     \\"cleared\\": 1,
      \\"date\\": 20170101,
      \\"error\\": null,
      \\"id\\": \\"id6\\",
      \\"imported_id\\": null,
      \\"imported_payee\\": null,"
`;
